styles.css
body {
    margin: 0;
}

/* variables */
:root {
    --colorPrimary: #0b111a;
    --colorPrimarySecondary: #0e0729d2;
    --colorPrimaryTertiary: #211f31;
    --colorSecondary: #def1ff;
    --colorBlue: #220e92a4;
    --colorRed: #fd7e7e;
}

main-container {
    display: flex;
    flex-direction: column;
    height: max-content;
    background-color: var(--colorPrimary);
    color: var(--colorSecondary);
    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    padding-bottom: 2rem;
    align-items: center;
}

a {
    color: var(--colorSecondary);
}

a:hover {
    text-decoration: none;
}

h1 {
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    font-size: 2.2rem;
    font-weight: 700;
    margin: 0.6rem 0;
    padding-top: 7rem;
}

h2 {
    font-size: 1.7rem;
    font-weight: 600;
    margin: 0.4rem 0
}

h3 {
    font-size: 1.2rem;
    font-weight: 500;
    margin: 0.2rem 0;
}

.secondary-border {
    border: 0.2rem solid var(--colorSecondary);
}

.box-content {
    border: 0.15rem solid var(--colorBlue);
    background-color: var(--colorPrimarySecondary);
    gap: 0.4em;
    border-radius: 20px;
    padding: 1.5rem 2rem;
    margin: 0;
}

#title-card, #about-me, #tools-and-skills, #my-projects, #contact-me {
    height: max-content;
    display: flex;
    flex-wrap: wrap;
    flex-direction: column;
    padding: 0 3rem;
}

#title-card {
    text-align: center;
}

#title-card > img {
    display: none;
    border-radius: 50%;
}

#self-descriptor {
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 1rem;
}

#self-descriptor span {
    color: var(--colorRed);
}

#self-descriptor img {
    width: 200px;
    border-radius: 50%;
    margin: 0 auto;
}

#tools-and-skills {
    gap: 1rem;
    padding: 0;
}

#tools-and-skills .box-content {
    display: flex;
    flex-wrap: wrap;
    max-width: 400px;
}

#tools-and-skills p {
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
    font-size: 1.4rem;
    font-weight: 700;
    width: 100%;
    text-align: left;
    margin: 0 0 0.4em;
}

#tools-and-skills .item {
    background-color: var(--colorPrimaryTertiary);
    border-radius: 10px;
    padding: 0.5rem 0.7rem;
    min-width: max-content;
    display: flex;
}

svg {
    width: 1.5em;
    height: 1.5em;
    margin-right: 0.2em;
}

#contact-me div {
    display: flex;
}

#contact-me svg {
    margin-right: 0.5em;
}

